--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         });
 
         document.getElementById('sort-desc').addEventListener('click', () => {
-            displayNews(sortByDateDesc(currentNews)); // Сортировка по убыванию
+            displayNews(sortByDateDesc(currentNews)); // Сортировка по убыванию а может и возрастанию
         });
     </script>
 
